2004-12-26  Christopher Faylor  <cgf@timesys.com>

	* init.cc (dll_entry): Remove exit code setting.
	* pinfo.cc (pinfo::init): Initialize exitcode to unset state rather
	than SIGTERM.
	(proc_waiter): Detect if exit code is unset and use status from
	GetExitCodeProcess.
	* sigproc.cc (child_info::sync): Remove exit code detection here since
	proc_waiter now (again) detects it.

2004-12-25  Christopher Faylor  <cgf@timesys.com>

	* fhandler.cc (fhandler_base::fchmod): Do the right thing when changing
	an "on disk" device or fifo.
	(fhandler_base::fchown): Ditto for changing ownership.
	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Accommodate
	device files on ntfs partitions.
	* path.cc (path_conv::check): Use isfs function to figure out if a path
	exists on a filesystem to make sure that device files are caught.

2004-12-24  Christopher Faylor  <cgf@timesys.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
	(child_info::parent_wr_proc_pipe): Eliminate.
	* pinfo.h (_pinfo::alert_parent): Move here from pinfo class.
	(_pinfo::dup_proc_pipe): New method.
	(_pinfo::sync_proc_pipe): Ditto.
	* exceptions.cc (sig_handle_tty_stop): Reflect move of alert_parent.
	* init.cc (dll_entry): Exit with status one if main process called
	ExitProcess.
	* pinfo.cc (set_myself): Remove handling of parent_wr_proc_pipe.
	(_pinfo::exit): Reflect move of alert_parent.  Set procinfo to NULL to
	flag that we are exiting normally.  Always use exitcode when exiting
	(although this could be a little racy).
	(pinfo::init): Set default exit to SIGTERM.  This will be the exit code
	reported if process is terminated.
	(_pinfo::dup_proc_pipe): New function.
	(pinfo::wait): Duplicate wr_proc_pipe to the right place.  Use
	dup_proc_pipe to move the pipe to the child.
	(_pinfo::sync_proc_pipe): New function.
	(_pinfo::alert_parent): Move to _pinfo.  Make sure that wr_proc_pipe is
	ours before using it.
	* sigproc.cc (child_info::child_info): Remove handling of
	parent_wr_proc_pipe.